[CSS] Fix spacing between table of images rows.

--- a/public/css/f4inx.css
+++ b/public/css/f4inx.css
@@ -318,6 +318,11 @@ img {
   max-width: 100%;
 }
 
+/* Tables */
+td {
+  line-height: 0;
+}
+
 
 /*************/
 /* Footnotes */
